fixed: code example z-index

--- a/_overrides/overrides.css
+++ b/_overrides/overrides.css
@@ -1,3 +1,3 @@
 #content-side-layout{
-    z-index: 100;
+    z-index: 30;
 }
